--- a/wazone_admin_panel_0.9.rc3/composer.json
+++ b/wazone_admin_panel_0.9.rc3/composer.json
@@ -8,9 +8,10 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^8.0.2",
+    "php": "^8.1",
+    "ext-curl": "*",
     "doctrine/dbal": "^3.3",
-    "guzzlehttp/guzzle": "^7.2",
+    "guzzlehttp/guzzle": "^7.4",
     "lab404/laravel-impersonate": "^1.7",
     "laravel/framework": "^9.2",
     "laravel/sanctum": "^2.14.1",
