--- a/wazone_admin_panel_0.9.rc3/.env.example
+++ b/wazone_admin_panel_0.9.rc3/.env.example
@@ -9,6 +9,9 @@ APP_PORT=8000
 APP_LANG=us
 APP_THEME=light-layout
 
+# Salla
+SALLA_TOKEN=
+
 APP_URL=http://localhost/wazone
 # localhost example: http://localhost/wazone (no trailing '/' at the end)
 # hosting example: https://mydomain.com (no trailing '/' at the end)
